# ChangeLog for net-firewall/xtables-addons
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/xtables-addons/ChangeLog,v 1.47 2014/06/26 13:44:44 maksbotan Exp $

*xtables-addons-2.5 (26 Jun 2014)

  26 Jun 2014; Maxim Koltsov <maksbotan@gentoo.org> +xtables-addons-2.5.ebuild:
  And bump to 2.5, thanks to mva

*xtables-addons-2.4 (26 Jun 2014)

  26 Jun 2014; Maxim Koltsov <maksbotan@gentoo.org> +xtables-addons-2.4.ebuild:
  Bump to 2.4, thanks to slepnoga

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> xtables-addons-2.3.ebuild:
  amd64 stable, bug #488016

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> xtables-addons-2.3.ebuild:
  Stable for x86, wrt bug #488016

  14 Oct 2013; Maxim Koltsov <maksbotan@gentoo.org> -xtables-addons-1.38.ebuild,
  -xtables-addons-1.39.ebuild, -xtables-addons-1.45.ebuild,
  -xtables-addons-2.2.ebuild:
  Remove old ebuilds, thanks to slepnoga

*xtables-addons-2.3 (18 Jun 2013)

  18 Jun 2013; Anthony G. Basile <blueness@gentoo.org>
  +xtables-addons-2.3.ebuild:
  Version bump

*xtables-addons-2.2 (17 May 2013)

  17 May 2013; Maxim Koltsov <maksbotan@gentoo.org> +xtables-addons-2.2.ebuild:
  Bump to 2.2, thanks to slepnoga

  01 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> xtables-addons-1.47.1.ebuild,
  xtables-addons-2.1.ebuild:
  Enable verbose build of kernel modules, wrt bug #458012

  06 Mar 2013; Agostino Sarubbo <ago@gentoo.org> xtables-addons-2.1.ebuild:
  Stable for x86, wrt bug #460148

  06 Mar 2013; Agostino Sarubbo <ago@gentoo.org> xtables-addons-1.47.1.ebuild:
  Stable for x86, wrt bug #451628

  06 Mar 2013; Agostino Sarubbo <ago@gentoo.org> xtables-addons-2.1.ebuild:
  Stable for amd64, wrt bug #460148

  06 Mar 2013; Agostino Sarubbo <ago@gentoo.org> xtables-addons-1.47.1.ebuild:
  Stable for amd64, wrt bug #451628

  02 Mar 2013; Anthony G. Basile <blueness@gentoo.org>
  xtables-addons-1.47.1.ebuild:
  Restrict to kernel versions < 3.7, bug #458014